--- a/визитка.html
+++ b/визитка.html
@@ -14,6 +14,6 @@
     </style>
     <h3>MilanaFlowers</h3> 
      <section>
-    <img src="c:\Users\Студент\Downloads\ChatGPT Image 18 июн. 2025 г., 09_03_04.png" alt="">
+    <img src="визитка.png" alt="">
 </body>
 </html>
