--- a/katalog.html
+++ b/katalog.html
@@ -18,10 +18,10 @@
     <h3>Кустовый роза</h3>
     <section class="cont">
         <div class="tovar">
-    <img src="c:\Users\Студент\Downloads\МИЛАНА\кустовый роза3.webp" alt="">
-    <img src="c:\Users\Студент\Downloads\МИЛАНА\кустовый роза.webp" alt="">
-    <img src="c:\Users\Студент\Downloads\МИЛАНА\кустовый роза 2.webp" alt="">
-    <img src="c:\Users\Студент\Downloads\МИЛАНА\i (5).webp" alt="">
+    <img src="кустовый роза3.webp" alt="">
+    <img src="кустовый роза.webp" alt="">
+    <img src="кустовый роза 2.webp" alt="">
+    <img src="i (5).webp" alt="">
     <p>1 ветка 170сом</p>
       <button><a href="https://wa.me/message/DABOGBC22V6PI1">Покупать</a></button>
     </div>
