--- a/index1.html
+++ b/index1.html
@@ -57,7 +57,7 @@
              <a href="katalog.html" target="contentFrame">Каталог</a>
              <a href="визитка.html" target="contentFrame">Визитка</a>
         </nav>
-        <iframe name="contentFrame" src="./Филтир.html  " title="Контент" width="800px"></iframe>
+        <iframe name="contentFrame" src="Филтир.html" title="Контент" width="800px"></iframe>
         </div>
         <div class="bailanush">
         <a href="mailto:Exmple@gmail.com">Milanaa@gmail.com</a><br>
