--- a/katalog.html
+++ b/katalog.html
@@ -29,10 +29,10 @@
     <h3>Пин Флоид Роза</h3>
      <section class="cont">
         <div class="tovar">
-    <img src="c:\Users\Студент\Downloads\МИЛАНА\пин флоид.webp" alt="">
-    <img src="c:\Users\Студент\Downloads\МИЛАНА\пин флоид 3.webp" alt="">
-    <img src="c:\Users\Студент\Downloads\МИЛАНА\пин флоид 2.webp" alt="">
-    <img src="c:\Users\Студент\Downloads\МИЛАНА\пин флоид 1.webp" alt="">
+    <img src="пин флоид.webp" alt="">
+    <img src="пин флоид 3.webp" alt="">
+    <img src="пин флоид 2.webp" alt="">
+    <img src="пин флоид 1.webp" alt="">
      <p>1 штук 200ом </p>
       <button><a href="https://wa.me/message/DABOGBC22V6PI1">Покупать</a></button>
     </div>
@@ -40,10 +40,10 @@
     <h3>Тюльпан</h3>
      <section  class="cont">
         <div class="tovar">
-    <img src="c:\Users\Студент\Downloads\МИЛАНА\тульпан.webp" alt="">
-    <img src="c:\Users\Студент\Downloads\МИЛАНА\у.webp" alt="">
-    <img src="c:\Users\Студент\Downloads\МИЛАНА\ц.webp" alt="">
-    <img src="c:\Users\Студент\Downloads\МИЛАНА\й.webp" alt="">
+    <img src="тульпан.webp" alt="">
+    <img src="у.webp" alt="">
+    <img src="ц.webp" alt="">
+    <img src="й.webp" alt="">
     <p>1 штук 150сом </p>
       <button><a href="https://wa.me/message/DABOGBC22V6PI1">Покупать</a></button>
     </div>
@@ -51,10 +51,10 @@
     <h3>Пионы</h3>  
      <section  class="cont">
         <div class="tovar">
-    <img src="c:\Users\Студент\Downloads\МИЛАНА\пиона.webp" alt="">
-    <img src="c:\Users\Студент\Downloads\МИЛАНА\i (4).webp" alt="">
-    <img src="c:\Users\Студент\Downloads\МИЛАНА\i (6).webp" alt="">
-    <img src="c:\Users\Студент\Downloads\МИЛАНА\i (8).webp" alt="">
+    <img src="пиона.webp" alt="">
+    <img src="i (4).webp" alt="">
+    <img src="i (6).webp" alt="">
+    <img src="i (8).webp" alt="">
     <p>1 штук 400сом </p>
       <button><a href="https://wa.me/message/DABOGBC22V6PI1">Покупать</a></button>
     </div>
@@ -62,10 +62,10 @@
     <h3>Каала</h3>
      <section  class="cont">
         <div class="tovar">>
-    <img src="c:\Users\Студент\Downloads\МИЛАНА\каала.webp" alt="">
-    <img src="c:\Users\Студент\Downloads\МИЛАНА\i (2).webp" alt="">
-    <img src="c:\Users\Студент\Downloads\МИЛАНА\i (1).webp" alt="">
-    <img src="c:\Users\Студент\Downloads\МИЛАНА\i (3).webp" alt="">
+    <img src="каала.webp" alt="">
+    <img src="i (2).webp" alt="">
+    <img src="i (1).webp" alt="">
+    <img src="i (3).webp" alt="">
     <p>1 штук 80сом </p>
       <button><a href="https://wa.me/message/DABOGBC22V6PI1">Покупать</a></button>
     </div>
@@ -73,7 +73,7 @@
     <h3>Гартензия</h3> 
      <section  class="cont">
         <div class="tovar">>
-    <img src="c:\Users\Студент\Downloads\МИЛАНА\гортензия.webp" alt="">
+    <img src="гортензия.webp" alt="">
     <img src="c:\Users\Студент\Downloads\МИЛАНА\i (9).webp" alt="">
     <img src="c:\Users\Студент\Downloads\МИЛАНА\i (10).webp" alt="">
     <img src="c:\Users\Студент\Downloads\МИЛАНА\i (11).webp  " alt="">
