--- a/katalog.html
+++ b/katalog.html
@@ -74,9 +74,9 @@
      <section  class="cont">
         <div class="tovar">>
     <img src="гортензия.webp" alt="">
-    <img src="c:\Users\Студент\Downloads\МИЛАНА\i (9).webp" alt="">
-    <img src="c:\Users\Студент\Downloads\МИЛАНА\i (10).webp" alt="">
-    <img src="c:\Users\Студент\Downloads\МИЛАНА\i (11).webp  " alt="">
+    <img src="i (9).webp" alt="">
+    <img src="i (10).webp" alt="">
+    <img src="i (11).webp  " alt="">
     <p>1 штук 500сом </p>
       <button><a href="https://wa.me/message/DABOGBC22V6PI1">Покупать</a></button>
     </div>
@@ -84,10 +84,10 @@
     <h3>Месный роза</h3>
     <section  class="cont">
         <div class="tovar">>
-    <img src="c:\Users\Студент\Downloads\МИЛАНА\i (12).webp" alt="">
-    <img src="c:\Users\Студент\Downloads\МИЛАНА\i (13).webp" alt="">
-    <img src="c:\Users\Студент\Downloads\МИЛАНА\i (14).webp" alt="">
-    <img src="c:\Users\Студент\Downloads\МИЛАНА\i (15).webp" alt="">
+    <img src="i (12).webp" alt="">
+    <img src="i (13).webp" alt="">
+    <img src="i (14).webp" alt="">
+    <img src="i (15).webp" alt="">
     <p>1 штук 100сом </p>
       <button><a href="https://wa.me/message/DABOGBC22V6PI1">Покупать</a></button>
     </div>
@@ -95,10 +95,10 @@
     <h3> Рамашка</h3>
     <section  class="cont">
         <div class="tovar">>
-    <img src="c:\Users\Студент\Downloads\МИЛАНА\i (19).webp" alt="">
-    <img src="c:\Users\Студент\Downloads\МИЛАНА\i (18).webp" alt="">
-    <img src="c:\Users\Студент\Downloads\МИЛАНА\i (17).webp" alt="">
-    <img src="c:\Users\Студент\Downloads\МИЛАНА\i (16).webp" alt="">
+    <img src="i (19).webp" alt="">
+    <img src="i (18).webp" alt="">
+    <img src="i (17).webp" alt="">
+    <img src="i (16).webp" alt="">
     <p>1 ветка 170сом </p>
       <button><a href="https://wa.me/message/DABOGBC22V6PI1">Покупать</a></button>
     </div>
@@ -106,10 +106,10 @@
     <h3>Голландский роза</h3>
     <section  class="cont">
         <div class="tovar">>
-    <img src="c:\Users\Студент\Downloads\МИЛАНА\галанский роза.webp" alt="">
-    <img src="c:\Users\Студент\Downloads\МИЛАНА\i (22).webp" alt="">
-    <img src="c:\Users\Студент\Downloads\МИЛАНА\i (23).webp" alt="">
-    <img src="c:\Users\Студент\Downloads\МИЛАНА\i (24).webp" alt="">
+    <img src="галанский роза.webp" alt="">
+    <img src="i (22).webp" alt="">
+    <img src="i (23).webp" alt="">
+    <img src="i (24).webp" alt="">
     <p>1 штук 200сом </p>
       <button><a href="https://wa.me/message/DABOGBC22V6PI1">Покупать</a></button>
     </div>
@@ -117,10 +117,10 @@
     <h3>Кения роза</h3>
     <section  class="cont">
         <div class="tovar">>
-    <img src="c:\Users\Студент\Downloads\МИЛАНА\i (26).webp" alt="">
-    <img src="c:\Users\Студент\Downloads\МИЛАНА\i (27).webp" alt="">
-    <img src="c:\Users\Студент\Downloads\МИЛАНА\i (28).webp" alt="">
-    <img src="c:\Users\Студент\Downloads\МИЛАНА\i (29).webp" alt="">
+    <img src="i (26).webp" alt="">
+    <img src="i (27).webp" alt="">
+    <img src="i (28).webp" alt="">
+    <img src="i (29).webp" alt="">
     <p>1 штук 100сом </p>
       <button><a href="https://wa.me/message/DABOGBC22V6PI1">Покупать</a></button>
     </div>
@@ -128,10 +128,10 @@
     <h3>Гипсофила</h3>
     <section class="cont">
         <div class="tovar">
-    <img src="c:\Users\Студент\Downloads\МИЛАНА\i (33).webp" alt="">
-    <img src="c:\Users\Студент\Downloads\МИЛАНА\i (32).webp" alt="">
-    <img src="c:\Users\Студент\Downloads\МИЛАНА\i (31).webp" alt="">
-    <img src="c:\Users\Студент\Downloads\МИЛАНА\i (30).webp" alt="">
+    <img src="i (33).webp" alt="">
+    <img src="i (32).webp" alt="">
+    <img src="i (31).webp" alt="">
+    <img src="i (30).webp" alt="">
     <p>1 штук 350сом </p>
       <button><a href="https://wa.me/message/DABOGBC22V6PI1">Покупать</a></button>
     </div>
@@ -139,10 +139,10 @@
     <h3>Диантус</h3>
     <section  class="cont">
         <div class="tovar">>
-    <img src="c:\Users\Студент\Downloads\МИЛАНА\i (34).webp" alt="">
-    <img src="c:\Users\Студент\Downloads\МИЛАНА\i (35).webp" alt="">
-    <img src="c:\Users\Студент\Downloads\МИЛАНА\i (36).webp" alt="">
-    <img src="c:\Users\Студент\Downloads\МИЛАНА\i (37).webp" alt="">
+    <img src="i (34).webp" alt="">
+    <img src="i (35).webp" alt="">
+    <img src="i (36).webp" alt="">
+    <img src="i (37).webp" alt="">
     <p>1 штук 150сом </p>
       <button><a href="https://wa.me/message/DABOGBC22V6PI1">Покупать</a></button>
     </div>
