--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </div>
         <div class="bailanush">
         <a href="mailto:Exmple@gmail.com">Milanaa@gmail.com</a><br>
-         <a href="tel:+996777090509"> номер+996 777 09 05 09 </a><br>
+         <a href="http://wa.me/996559055084"> номер+996 777 09 05 09 </a><br>
          <a href="">Адрес:А.Масалиева 38/1 ориентр Рамазан</a>
     </div>
     
