--- a/katalog.html
+++ b/katalog.html
@@ -23,7 +23,7 @@
     <img src="кустовый роза 2.webp" alt="">
     <img src="i (5).webp" alt="">
     <p>1 ветка 170сом</p>
-      <button><a href="https://wa.me/message/DABOGBC22V6PI1">Покупать</a></button>
+      <button><a href="http://wa.me/996559055084">Покупать</a></button>
     </div>
     </section>
     <h3>Пин Флоид Роза</h3>
@@ -34,7 +34,7 @@
     <img src="пин флоид 2.webp" alt="">
     <img src="пин флоид 1.webp" alt="">
      <p>1 штук 200ом </p>
-      <button><a href="https://wa.me/message/DABOGBC22V6PI1">Покупать</a></button>
+      <button><a href="http://wa.me/996559055084">Покупать</a></button>
     </div>
     </section>
     <h3>Тюльпан</h3>
@@ -45,7 +45,7 @@
     <img src="ц.webp" alt="">
     <img src="й.webp" alt="">
     <p>1 штук 150сом </p>
-      <button><a href="https://wa.me/message/DABOGBC22V6PI1">Покупать</a></button>
+      <button><a href="http://wa.me/996559055084">Покупать</a></button>
     </div>
     </section>
     <h3>Пионы</h3>  
@@ -56,7 +56,7 @@
     <img src="i (6).webp" alt="">
     <img src="i (8).webp" alt="">
     <p>1 штук 400сом </p>
-      <button><a href="https://wa.me/message/DABOGBC22V6PI1">Покупать</a></button>
+      <button><a href="http://wa.me/996559055084">Покупать</a></button>
     </div>
     </section>
     <h3>Каала</h3>
@@ -67,7 +67,7 @@
     <img src="i (1).webp" alt="">
     <img src="i (3).webp" alt="">
     <p>1 штук 80сом </p>
-      <button><a href="https://wa.me/message/DABOGBC22V6PI1">Покупать</a></button>
+      <button><a href="http://wa.me/996559055084">Покупать</a></button>
     </div>
     </section>
     <h3>Гартензия</h3> 
@@ -78,7 +78,7 @@
     <img src="i (10).webp" alt="">
     <img src="i (11).webp  " alt="">
     <p>1 штук 500сом </p>
-      <button><a href="https://wa.me/message/DABOGBC22V6PI1">Покупать</a></button>
+      <button><a href="http://wa.me/996559055084">Покупать</a></button>
     </div>
     </section>
     <h3>Месный роза</h3>
@@ -111,7 +111,7 @@
     <img src="i (23).webp" alt="">
     <img src="i (24).webp" alt="">
     <p>1 штук 200сом </p>
-      <button><a href="https://wa.me/message/DABOGBC22V6PI1">Покупать</a></button>
+      <button><a href="http://wa.me/996559055084">Покупать</a></button>
     </div>
     </section>
     <h3>Кения роза</h3>
@@ -122,7 +122,7 @@
     <img src="i (28).webp" alt="">
     <img src="i (29).webp" alt="">
     <p>1 штук 100сом </p>
-      <button><a href="https://wa.me/message/DABOGBC22V6PI1">Покупать</a></button>
+      <button><a href="http://wa.me/996559055084">Покупать</a></button>
     </div>
     </section>
     <h3>Гипсофила</h3>
@@ -133,7 +133,7 @@
     <img src="i (31).webp" alt="">
     <img src="i (30).webp" alt="">
     <p>1 штук 350сом </p>
-      <button><a href="https://wa.me/message/DABOGBC22V6PI1">Покупать</a></button>
+      <button><a href="http://wa.me/996559055084">Покупать</a></button>
     </div>
     </section>
     <h3>Диантус</h3>
@@ -144,7 +144,7 @@
     <img src="i (36).webp" alt="">
     <img src="i (37).webp" alt="">
     <p>1 штук 150сом </p>
-      <button><a href="https://wa.me/message/DABOGBC22V6PI1">Покупать</a></button>
+      <button><a href="http://wa.me/996559055084">Покупать</a></button>
     </div>
     </section>
     
