--- a/katalog.html
+++ b/katalog.html
@@ -23,7 +23,7 @@
     <img src="кустовый роза 2.webp" alt="">
     <img src="i (5).webp" alt="">
     <p>1 ветка 170сом</p>
-      <button><a href="http://wa.me/996559055084">Покупать</a></button>
+      <button><a href="http://wa.me/qr/WIDY4NMFUGYEC1">Покупать</a></button>
     </div>
     </section>
     <h3>Пин Флоид Роза</h3>
